testsuite/tests/jane-modular-syntax/user_error2.compilers.reference
File "user_error2.ml", line 21, characters 46-69:
21 | let _malformed_extensions_wrong_arguments = [%jane.erasable.something] "two" "arguments";;
                                                   ^^^^^^^^^^^^^^^^^^^^^^^
Error: Uninterpreted extension 'jane.erasable.something'.
